--- a/web/pom.xml
+++ b/web/pom.xml
@@ -92,8 +92,8 @@
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
+			<artifactId>gcommons-cli</artifactId>
+			<version>1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.reflections</groupId>
