--- a/plugins/crawloverview-plugin/pom.xml
+++ b/plugins/crawloverview-plugin/pom.xml
@@ -83,7 +83,12 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>${selenium.version}</version>
-			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-api</artifactId>
+			<version>${selenium.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
