--- a/core/pom.xml
+++ b/core/pom.xml
@@ -243,6 +243,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>net.lightbody.bmp</groupId>
+			<artifactId>browsermob-core</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
 	</dependencies>
 
